[tool.poetry]
name = "kasa-cloud-client"
version = "0.1.0"
description = "This package can control your TP-Link smart plugs or smart bulbs using TP-Link cloud service."
authors = ["Kosuke Maeda <maeda.dvlp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
dataclasses-json = "^0.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
rope = "^0.18.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
